Closed
Bug 1434804
Opened 7 years ago
Closed 7 years ago
Setting volume to audible after auto-playing inaudible video makes video audible
Categories
(Core :: Audio/Video: Playback, defect, P3)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla61
Tracking | Status | |
---|---|---|
firefox61 | --- | fixed |
People
(Reporter: cpearce, Assigned: cpearce)
References
Details
Attachments
(4 files)
Our blocking of autoplay of audible videos is trivial to defeat:
STR, create a web page that:
1. Load a video.
2. Set video.volume = 0, or video.mute = true
3. call video.play(). Under autoplay policy the video should play without user gesture as it's inaudible.
4. set video.volume = 1.0, or video.mute = false.
5. Voila! Audible video is auto playing.
We should probably check to see whether the media is allowed to autoplay audibly when setting volume!=0 or !muted and pause() the video if its not allowed.
Assignee | ||
Comment 1•7 years ago
|
||
Assignee | ||
Comment 2•7 years ago
|
||
Updated•7 years ago
|
Priority: -- → P3
Assignee | ||
Comment 3•7 years ago
|
||
We should consider doing do the reverse too; if a video has an autoplay attribute and is audible and is subsequently muted, maybe we should start playback?
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Assignee | ||
Updated•7 years ago
|
Assignee: nobody → cpearce
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Comment on attachment 8958011 [details]
Bug 1434804 - Test that setting a muted-autoplay media to audible pauses media.
https://reviewboard.mozilla.org/r/226946/#review233006
Attachment #8958011 -
Flags: review?(dglastonbury) → review+
Comment on attachment 8958012 [details]
Bug 1434804 - Pause autoplayed media if they become audible.
https://reviewboard.mozilla.org/r/226948/#review233010
Attachment #8958012 -
Flags: review?(dglastonbury) → review+
Comment 10•7 years ago
|
||
Pushed by cpearce@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/09d7852a968d
Pause autoplayed media if they become audible. r=kamidphish
https://hg.mozilla.org/integration/autoland/rev/8ea5bbce1d95
Test that setting a muted-autoplay media to audible pauses media. r=kamidphish
Comment 11•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/09d7852a968d
https://hg.mozilla.org/mozilla-central/rev/8ea5bbce1d95
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox61:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Updated•7 years ago
|
QA Whiteboard: [good first verify]
You need to log in
before you can comment on or make changes to this bug.
Description
•